<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="DEFLECTION_CONTROL_POSITION" Id="{60c1f820-69c0-4a7e-be70-dcc8cdc50331}">
    <Declaration><![CDATA[PROGRAM DEFLECTION_CONTROL_POSITION
VAR
		USED_FORCE_SIGNAL: REAL:=0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ACT_NC_PROGRAM=15 THEN
	
	//USED_FORCE_SIGNAL:=-A_SIGNAL_2;
	USED_FORCE_SIGNAL:=SIGNAL_FORCE_FLT[2];
	//USED_FORCE_SIGNAL:=SQRT(EXPT(A_SIGNAL_1,2)+EXPT(A_SIGNAL_2,2));
		
	IF USED_FORCE_SIGNAL<0 THEN
		FORCE_ACT:=0;
		ELSE FORCE_ACT:=USED_FORCE_SIGNAL;	
	END_IF
	
	(*IF ACT_NC_PROGRAM_STEP=11 THEN
		IF ACT_NC_PARAM_3=1 THEN
			TOOL_STIFFNESS_ACT:=TOOL_STIFFNESS_SELC_PTS[1,3];
			ELSE
			TOOL_STIFFNESS_ACT:=TOOL_STIFFNESS_SELC_PTS[2,3];
		END_IF
	END_IF
	
	IF ACT_NC_PROGRAM_STEP=12 THEN
		TOOL_STIFFNESS_ACT:=TOOL_STIFFNESS_SELC_PTS[2,3];
	END_IF
	*)
	//TOOL_STIFFNESS_ACT:=TOOL_STIFFNESS_SELC_PTS[1,3];
	//TOOL_STIFFNESS_ACT:=TOOL_STIFFNESS_SELC_PTS[2,3];
	TOOL_STIFFNESS_ACT:=6;  // Zur Sicherheit falls Steifigkeitsmessung nicht funktioniert
	DEFLECTION_ACT:=FORCE_ACT/TOOL_STIFFNESS_ACT;		//µm
		
	
	IF ACT_NC_PROGRAM_STEP=1 THEN
			DEFLECTION_CONTROL_ON:=1;			//DEFLECTION CONTROL ON		
		ELSE
			DEFLECTION_CONTROL_ON:=0;
	END_IF


	IF	DEFLECTION_CONTROL_ON=1 THEN
	
		//DEFLECTION_DIF:=DEFLECTION_REF-DEFLECTION_ACT;
		DEFLECTION_DIF:=-(0-DEFLECTION_ACT);
			
		POS_REG_P:=POS_K_P*DEFLECTION_DIF;
		POS_REG_I:=0;
		
		POS_REG:=POS_REG_P+POS_REG_I+POS_MID;
		POS_MACHINE:=POS_REG;
	
		IF POS_MACHINE > SATURATION_POS_MAX THEN
			POS_MACHINE:=SATURATION_POS_MAX;
		END_IF

		IF POS_MACHINE < SATURATION_POS_MIN THEN
			POS_MACHINE:=SATURATION_POS_MIN;
		END_IF
	
		ELSE POS_MACHINE:=POS_MID;
	
	END_IF
		
	SET_NC_PARAM_1:= REAL_TO_WORD(POS_MACHINE+1000);
	ELSE
		SET_NC_PARAM_1:= 1000;
END_IF]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>